# CoBruh

./: .gitignore  CoBruh.opam  Makefile  README.md  copile.sh  dune-project  main.ll
src/: .gitignore  Makefile  ast.ml  dune-project  parser.mly  parser.output  parsertest.ml  sast.ml  scanner.mll  semant.ml  semanttest.ml  test  test.ml
src/lib/: dune  irgen.ml  parser.mly  sast.ml  scanner.mll
src/test/: dune  testall.py
src/test/tests/: fail-assign1.bruh  fail-assign1.err  reverse-2.bruh  reverse-2.out  test-array-change.bruh  test-array-change1.bruh  test-array-change1.err  test-array-change2.err  test-array-change3.bruh  test-array-index.bruh  test-char1.bruh  test-coin-change1.bruh  test-coin-change2.bruh  test-coin-change3.bruh  test-dangling1.bruh  test-duplicate-func.bruh  test-duplicate-func.err  test-duplicate-param-name.bruh  test-duplicate-param-name.err  test-duplicate-param-name1.bruh  test-invalid-assign.bruh  test-invalid-assign.err  test-invalid-bop-args.bruh  test-invalid-bop-args.err  test-invalid-bop-args1.bruh  test-invalid-cond-loop.bruh  test-invalid-cond-loop.err  test-invalid-if.bruh  test-invalid-if.err  test-invalid-unop-args.err  test-keyword1.bruh  test-loop-keyword-outside-loop1.err  test-loop-keyword-outside-loop2.bruh  test-mismatched-bop-args.err  test-mismatched-func-args.bruh  test-mismatched-func-args.err  test-missing-func.bruh  test-missing-func.err  test-missing-none-assignment.bruh  (+17 more)
src/test_src/: input.bruh  numbers.bruh  parserinput.bruh  semantinput.bruh  semantinput2.bruh  sig_whitespace_test.bruh  sigwhitespaceinput.bruh
(+49 files in other folders)
